# pycoway

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-pr.yml  ci.yml  release.yml  version-label.yml
cowayaio/: __init__.py  auth.py  control.py  coway_client.py  data.py  http.py  maintenance.py  purifier_parser.py  str_enum.py
src/cowayaio/: __init__.py  client.py  constants.py
src/cowayaio/account/: __init__.py  auth.py  maintenance.py
src/cowayaio/devices/: __init__.py  control.py  data.py  models.py  parser.py
src/cowayaio/transport/: __init__.py
src/pycoway/: __init__.py  client.py  constants.py  enums.py  exceptions.py
src/pycoway/account/: __init__.py  auth.py  maintenance.py
src/pycoway/devices/: __init__.py  control.py  data.py  models.py  parser.py
src/pycoway/transport/: __init__.py  http.py
tests/: conftest.py  test_client.py  test_hb_endpoints.py  test_http.py  test_iot_data.py  test_iot_endpoints.py  test_models.py  test_parser.py  test_purifier_parser.py
